java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting8/StrictfpInsideInterface.java
interface A {
   <error descr="Illegal combination of modifiers: 'strictfp' and 'abstract'">strictfp</error> void m();
   strictfp default void m1(){}
   strictfp static void m2() {}
}